tests/fixtures/errors/e0401_plus_into_same_width.mimz
// expect: E0401
module M {
  clock clk
  reset rst
  reg value: bits[8] = 0
  on rise(clk) {
    value <- value + 1
  }
}
